--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   height: 100vh;
   border: 20px solid rgb(0, 0, 0);
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .child1 {
