--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   border: 20px solid rgb(0, 0, 0);
   display: flex;
   justify-content: space-evenly;
-  align-items: flex-start;
+  align-items: flex-end;
 }
 
 .child1 {
