--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@
   border: 20px solid rgb(0, 0, 0);
   display: flex;
   justify-content: space-evenly;
-  align-items: flex-end;
+  align-items: stretch;
 }
 
 .child1 {
   width: 200px;
-  height: 200px;
+  /* height: 200px; */
   background: rgb(39, 61, 134);
 }
 
