--- a/style.css
+++ b/style.css
@@ -8,13 +8,14 @@
   height: 100vh;
   border: 20px solid rgb(0, 0, 0);
   display: flex;
-  justify-content: space-evenly;
-  align-items: stretch;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .child1 {
   width: 200px;
-  /* height: 200px; */
+  height: 200px;
   background: rgb(39, 61, 134);
 }
 
