--- a/style.css
+++ b/style.css
@@ -8,9 +8,8 @@
   height: 100vh;
   border: 20px solid rgb(0, 0, 0);
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  flex-wrap: wrap;
+  align-content: flex-start;
 }
 
 .child1 {
@@ -29,4 +28,10 @@
   width: 200px;
   height: 200px;
   background: rgb(149, 43, 140);
+}
+
+.child4 {
+  width: 200px;
+  height: 200px;
+  background: rgb(55, 149, 43);
 }
