--- a/style.css
+++ b/style.css
@@ -18,21 +18,19 @@ h1 {
   width: 200px;
   height: 200px;
   background: rgb(39, 61, 134);
-  order: 0;
+  flex-grow: 1;
 }
 
 .child2 {
   width: 200px;
   height: 200px;
   background: rgb(172, 57, 53);
-  order: 2;
 }
 
 .child3 {
   width: 200px;
   height: 200px;
   background: rgb(149, 43, 140);
-  order: 1;
 }
 
 .child4 {
