add flex: 1 1 300px flex-wrap: wrap

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ h1 {
   height: 100vh;
   border: 20px solid rgb(0, 0, 0);
   display: flex;
+  flex-wrap: wrap;
 }
 
 .child1 {
@@ -25,12 +26,14 @@ h1 {
   width: 200px;
   height: 200px;
   background: rgb(172, 57, 53);
+  flex: 1 1 300px;
 }
 
 .child3 {
   width: 200px;
   height: 200px;
   background: rgb(149, 43, 140);
+  flex: 1 1 300px;
 }
 
 .child4 {
